--- a/docker-compose.dev.server.yml
+++ b/docker-compose.dev.server.yml
@@ -28,6 +28,7 @@ services:
       --ext "ts,json"
       --ignore "node_modules/*"
       --ignore "dist/*"
+      --ignore results.json
       --exec "node --inspect=0.0.0.0:9229 -r ts-node/register index.ts"
 
   cpp-service:
