--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "luxon": "^3.4.4",
     "morgan": "^1.10.0",
     "pg": "^8.12.0",
+    "posthog-node": "^4.11.1",
     "rxjs": "^7.8.1",
     "session": "^0.1.0",
     "ts-jest": "^29.2.2",
