--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,15 @@ http {
         location / {
             root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
+            
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+            add_header Pragma "no-cache";
+            add_header Expires 0;
+        }
+
+        location ~* \.(?:css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
+            expires 1s;
+            add_header Cache-Control "public, max-age=1, must-revalidate";
         }
 
         location /api {
