--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -29,11 +29,13 @@ http {
         
         location / {
             root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-            
-            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
-            add_header Pragma "no-cache";
-            add_header Expires 0;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+
+        # Always serve a fresh index.html to get the latest hashed file references
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires 0;
         }
 
         location ~* \.(?:css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
