--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -17,6 +17,7 @@ RUN npm run build:prod
 FROM nginx:alpine AS final
 
 COPY --from=prod /app/dist/client-app /usr/share/nginx/html
+COPY --from=prod /app/dist/client-app /etc/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
